Add : partner logo

--- a/src/contact.html
+++ b/src/contact.html
@@ -204,47 +204,47 @@
                             <ul class="faq-shortcut__lists">
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        How will my order ship?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        How much does shipping cost?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        How do I schedule my delivery?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        Can you expedite shipping?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        What is your return policy?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        Do you accept order changes and cancellations?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        I received a damaged or defective item in shipment. What should I do?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        Do you accept exchanges?
                                     </a>
                                 </li>
                                 <li>
                                     <a href="about.html">
-                                        Am I eligible to apply for a Credit Card ?
+                                        Tracking shows my package was delivered but I cannot find it! What should I do?
                                     </a>
                                 </li>
                             </ul>
