--- a/src/products.html
+++ b/src/products.html
@@ -67,8 +67,8 @@
                             </div>
                         </div>
                         <div class="col-md-5 offset-md-1">
-                            <h1><span>Award-winning</span> home loans, delivered simply</h1>
-                            <p class="subheading">Whether you're a first-time buyer or refinancing an investment property, we've got the loan for you.</p>
+                            <h1><span>Award-winning</span> local store, delivered simply</h1>
+                            <p class="subheading">Discover classic and contemporary styles finely crafted from premium Indonesian fabrics, including pure wool, linen cotton, alpaca, cashmere and silk.</p>
                             <p class="subtitle">** Psst get 30% discount here</p>
                         </div>
                     </div>
@@ -338,11 +338,11 @@
                                                 <i class="icon-star"></i>
                                             </li>
                                         </ul>
-                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <h3 class="card__text card__text--title">I truly appreciate how awesome you are!!!</h3>
                                         <p class="review-slider__description">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                            For like the 1000th time in a row, Holo comes through. I just put the order in. The camo pattern dry fit jerseys are fantastic. The fit and finish are awesome. I got my wife a sweatshirt when I was putting the order together. She loves it.
                                         </p>
-                                        <p class="review-slider__author">- John Smith</p>
+                                        <p class="review-slider__author">- Paul Maguire</p>
                                     </div>
                                 </div>
                             </div>
@@ -366,11 +366,11 @@
                                                 <i class="icon-star"></i>
                                             </li>
                                         </ul>
-                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <h3 class="card__text card__text--title">Consistent Quality With Timely Production Times </h3>
                                         <p class="review-slider__description">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                            Have used Holo for my businesses apparel for years. Company is always very responsive if there is an issue and provide a timely correction. This time around all was perfect and delivery was quicker than anticipated. Great all around company!
                                         </p>
-                                        <p class="review-slider__author">- John Smith</p>
+                                        <p class="review-slider__author">- AI Ryan</p>
                                     </div>
                                 </div>
                             </div>
@@ -394,11 +394,39 @@
                                                 <i class="icon-star"></i>
                                             </li>
                                         </ul>
-                                        <h3 class="card__text card__text--title">Best product experience possible</h3>
+                                        <h3 class="card__text card__text--title">Excellent Customer Service</h3>
                                         <p class="review-slider__description">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod adipisci ipsum quasi eum explicabo. Ducimus sapiente molestiae fugit, error quisquam natus omnis reprehenderit id placeat. Debitis, cumque! Beatae aspernatur nam mollitia fugit architecto maxime ipsa impedit quae neque? Eius!...
+                                            I ordered a couple of polo shirts with the company name/logo and the shirts were a bit snug although the size needed. I was not prepared to find out the company has a "No Returns Necessary" Guarantee and shipped me new apparel in the next size immediately. The overall experience of how my order was handled was great, they were eager to remedy the matter. I would recommend them to anyone and everyone who is interested in purchasing items for their own businesses.
                                         </p>
-                                        <p class="review-slider__author">- John Smith</p>
+                                        <p class="review-slider__author">- Golden Rose</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide review-slider__item">
+                                <div class="card card--review">
+                                    <div class="card__description">
+                                        <ul class="product__rating product__rating--review">
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                            <li>
+                                                <i class="icon-star"></i>
+                                            </li>
+                                        </ul>
+                                        <h3 class="card__text card__text--title">HOLO is the best!</h3>
+                                        <p class="review-slider__description">
+                                            I love, love, love HOLO! I know I’m in good hands from start to finish of every order they help me with. And the quality of their printing is top notch and durable! They always recommend the best clothing brands for my budget too.
+                                        </p>
+                                        <p class="review-slider__author">- Jullie</p>
                                     </div>
                                 </div>
                             </div>
