Add : tablet responsive layout

--- a/src/about.html
+++ b/src/about.html
@@ -89,8 +89,8 @@
                         <div class="col-md-5 offset-md-1">
                             <div class="text-media__image image-wrapper">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                    <source media="(min-width: 992px)" srcset="./img/about-experience.jpg">
+                                    <img src="./img/about-experience.jpg" alt="About" class="img-fluid">
                                 </picture>
                             </div>
                         </div>
@@ -106,8 +106,8 @@
                         <div class="col-md-5">
                             <div class="text-media__image image-wrapper">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                    <source media="(min-width: 992px)" srcset="./img/about-mission.jpg">
+                                    <img src="./img/about-mission.jpg" alt="About" class="img-fluid">
                                 </picture>
                             </div>
                         </div>
@@ -137,8 +137,8 @@
                         <div class="col-md-5 offset-md-1">
                             <div class="text-media__image image-wrapper">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                    <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                    <source media="(min-width: 992px)" srcset="./img/about-quality.jpg">
+                                    <img src="./img/about-quality.jpg" alt="About" class="img-fluid">
                                 </picture>
                             </div>
                         </div>
