--- a/src/contact.html
+++ b/src/contact.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="card-icon__wrapper">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-sms"></i>
@@ -93,7 +93,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-send"></i>
@@ -110,7 +110,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-location"></i>
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="contact__wrapper">
                     <div class="row">
-                        <div class="col-12 col-md-8">
+                        <div class="col-12 col-md-10 col-lg-8">
                             <div class="contact__header">
                                 <h2>Send us a message</h2>
                             </div>
@@ -184,13 +184,13 @@
             <div class="container">
                 <div class="faq-shortcut__wrapper">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <p class="subtitle">Frequently asked questions</p>
                             <h3>Save time with an instant answer</h3>
                             <div class="image-wrapper faq-shortcut__image">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                    <img src="./img/about-media-1.jpg" alt="Save">
+                                    <source media="(min-width: 992px)" srcset="./img/save-time.jpg">
+                                    <img src="./img/save-time.jpg" alt="Save your time">
                                 </picture>
                             </div>
                             <div class="faq-shortcut__button faq-shortcut__button--desktop">
@@ -200,7 +200,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <ul class="faq-shortcut__lists">
                                 <li>
                                     <a href="about.html">
