--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="banner__wrapper">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-12 col-lg-6">
                             <h1>Indonesia's <span>Best Local</span> seller of the Year</h1>
                             <p class="subheading">Our products are made with you in mind from organic and cruelty free, paraben free ingredients.</p>
                             <div class="banner__button">
@@ -66,10 +66,11 @@
                                 <a href="about.html" class="btn btn-arrow">Become our partner</a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-12 col-lg-6">
                             <div class="image-wrapper banner__image">
                                 <picture>
-                                    <img src="./img/about-media-1.jpg" alt="Indonesia Best Seller">
+                                    <source media="(min-width: 992px)" srcset="./img/home-banner.jpg">
+                                    <img src="./img/home-banner.jpg" alt="Indonesia Best Seller">
                                 </picture>
                             </div>
                         </div>
@@ -392,8 +393,8 @@
                                     <div class="col-md-5 offset-md-1">
                                         <div class="text-media__image image-wrapper">
                                             <picture>
-                                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                                <source media="(min-width: 992px)" srcset="./img/home-women.jpg">
+                                                <img src="./img/home-women.jpg" alt="About" class="img-fluid">
                                             </picture>
                                         </div>
                                     </div>
@@ -409,8 +410,8 @@
                                     <div class="col-md-5 offset-md-1">
                                         <div class="text-media__image image-wrapper">
                                             <picture>
-                                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                                <source media="(min-width: 992px)" srcset="./img/home-men.jpg">
+                                                <img src="./img/home-men.jpg" alt="About" class="img-fluid">
                                             </picture>
                                         </div>
                                     </div>
@@ -427,8 +428,8 @@
                                     <div class="col-md-5 offset-md-1">
                                         <div class="text-media__image image-wrapper">
                                             <picture>
-                                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                                <source media="(min-width: 992px)" srcset="./img/home-accessories.jpg">
+                                                <img src="./img/home-accessories.jpg" alt="About" class="img-fluid">
                                             </picture>
                                         </div>
                                     </div>
@@ -444,8 +445,8 @@
                                     <div class="col-md-5 offset-md-1">
                                         <div class="text-media__image image-wrapper">
                                             <picture>
-                                                <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                                <img src="./img/about-media-1.jpg" alt="About" class="img-fluid">
+                                                <source media="(min-width: 992px)" srcset="./img/home-electronic.jpg">
+                                                <img src="./img/home-electronic.jpg" alt="About" class="img-fluid">
                                             </picture>
                                         </div>
                                     </div>
@@ -673,7 +674,8 @@
                             <p>Shop for latest product from our local artist. Anywhere. Any time.</p>
                             <div class="image-wrapper step__image">
                                 <picture>
-                                    <img src="./img/about-media-1.jpg" alt="Easy steps">
+                                    <source media="(min-width: 992px)" srcset="./img/home-step.jpg">
+                                    <img src="./img/home-step.jpg" alt="Easy steps">
                                 </picture>
                             </div>
                         </div>
