--- a/src/products.html
+++ b/src/products.html
@@ -61,12 +61,12 @@
                         <div class="col-md-6">
                             <div class="image-wrapper banner__image banner__image--normal">
                                 <picture>
-                                    <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
-                                    <img src="./img/about-media-1.jpg" alt="Simple">
+                                    <source media="(min-width: 992px)" srcset="./img/product-banner.jpg">
+                                    <img src="./img/product-banner.jpg" alt="Simple">
                                 </picture>
                             </div>
                         </div>
-                        <div class="col-md-5 offset-md-1">
+                        <div class="col-lg-5 col-md-6 offset-lg-1">
                             <h1><span>Award-winning</span> local store, delivered simply</h1>
                             <p class="subheading">Discover classic and contemporary styles finely crafted from premium Indonesian fabrics, including pure wool, linen cotton, alpaca, cashmere and silk.</p>
                             <p class="subtitle">** Psst get 30% discount here</p>
@@ -80,117 +80,6 @@
             <div class="container">
                 <div class="product__wrapper">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="product__item card">
-                                <div class="card__wrapper">
-                                    <div class="card__image">
-                                        <picture>
-                                            <img src="./img/about-media-1.jpg" alt="Product 1">
-                                        </picture>
-                                    </div>
-                                    <div class="card__description">
-                                        <h3 class="card__text card__text--title">Lorem, ipsum dolor.</h3>
-                                        <p class="card__text card__text--red">Rp. 20.000</p>
-                                        <ul class="product__rating">
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                                (120)
-                                            </li>
-                                        </ul>
-                                        <div class="card__button">
-                                            <button class="btn btn-primary">Buy</button>
-                                            <button class="btn btn-secondary">Details</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="product__item card">
-                                <div class="card__wrapper">
-                                    <div class="card__image">
-                                        <picture>
-                                            <img src="./img/about-media-1.jpg" alt="Product 1">
-                                        </picture>
-                                    </div>
-                                    <div class="card__description">
-                                        <h3 class="card__text card__text--title">Lorem, ipsum dolor.</h3>
-                                        <p class="card__text card__text--red">Rp. 20.000</p>
-                                        <ul class="product__rating">
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                                (120)
-                                            </li>
-                                        </ul>
-                                        <div class="card__button">
-                                            <button class="btn btn-primary">Buy</button>
-                                            <button class="btn btn-secondary">Details</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="product__item card">
-                                <div class="card__wrapper">
-                                    <div class="card__image">
-                                        <picture>
-                                            <img src="./img/about-media-1.jpg" alt="Product 1">
-                                        </picture>
-                                    </div>
-                                    <div class="card__description">
-                                        <h3 class="card__text card__text--title">Lorem, ipsum dolor.</h3>
-                                        <p class="card__text card__text--red">Rp. 20.000</p>
-                                        <ul class="product__rating">
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                            </li>
-                                            <li>
-                                                <i class="icon-star"></i>
-                                                (120)
-                                            </li>
-                                        </ul>
-                                        <div class="card__button">
-                                            <button class="btn btn-primary">Buy</button>
-                                            <button class="btn btn-secondary">Details</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="col-md-4">
                             <div class="product__item card">
                                 <div class="card__wrapper">
@@ -450,7 +339,7 @@
         <div class="footer__wrapper">
             <section class="footer__top">
                 <div class="footer__wrapper-box row">
-                    <div class="footer__top-item col-md-4">
+                    <div class="footer__top-item col-lg-4 col-md-4">
                         <h2>Let's talk</h2>
                         <p class="footer__description">
                             Sometimes we all just need to talk to a human
@@ -466,7 +355,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="footer__top-item col-md-2">
+                    <div class="footer__top-item col-lg-2 col-md-3">
                         <ul class="footer__contact">
                             <li class="row">
                                 <span class="col-2">
@@ -496,7 +385,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer__top-item col-md-4">
+                    <div class="footer__top-item col-lg-4 col-md-4">
                         <h3>Connect with us</h3>
                         <ul class="footer__social row">
                             <li class="col-2">
