Update : banner & contact spacing

--- a/src/contact.html
+++ b/src/contact.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="card-icon__wrapper">
                     <div class="row">
-                        <div class="col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-sms"></i>
@@ -93,7 +93,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-send"></i>
@@ -110,7 +110,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-location"></i>
