Add : sal animation transition

--- a/src/404.html
+++ b/src/404.html
@@ -64,12 +64,12 @@
     <main class="page-wrap">
         <section class="section section--tight error-page">
             <div class="container">
-                <div class="error-page__wrapper">
+                <div class="error-page__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <picture>
                         <img src="./img/404-error.svg" alt="404 error">
                     </picture>
                 </div>
-                <a href="/" class="btn btn-primary">Go Back</a>
+                <a href="/" class="btn btn-primary" data-sal="fade" data-sal-delay="800" data-sal-duration="500" data-sal-easing="ease-out-back">Go Back</a>
             </div>
         </section>
     </main>
