--- a/src/term.html
+++ b/src/term.html
@@ -67,8 +67,8 @@
                 <div class="banner__wrapper">
                     <div class="row">
                         <div class="col-md-8">
-                            <h1>Terms and Conditions</h1>
-                            <div class="banner__description">
+                            <h1 data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">Terms and Conditions</h1>
+                            <div class="banner__description" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">
                                 <p>
                                     We value our <strong>visitors privacy,</strong> so we are not collecting any data
                                 </p>
@@ -217,9 +217,9 @@
                 <div class="cta__wrapper">
                     <div class="row">
                         <div class="col-md-8">
-                            <p class="h1">Start saving time and cash</p>
-                            <p class="subheading">Get up-to 30% discount right away.</p>
-                            <a href="products.html" class="btn btn-primary">Buy now</a>
+                            <p class="h1" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">Start saving time and cash</p>
+                            <p class="subheading" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">Get up-to 30% discount right away.</p>
+                            <a href="products.html" class="btn btn-primary" data-sal="fade" data-sal-delay="600" data-sal-duration="500" data-sal-easing="ease-out-back">Buy now</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <section class="footer__top">
+            <section class="footer__top" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__top-item col-md-4">
                         <h2>Let's talk</h2>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__middle">
+            <section class="footer__middle" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__middle-item col-md-3">
                         <h3>Shop Products</h3>
@@ -354,7 +354,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__bottom">
+            <section class="footer__bottom" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__bottom-item col-md-3">
                         <p>&copy; 2023 Holo Store.</p>
