--- a/src/about.html
+++ b/src/about.html
@@ -68,11 +68,11 @@
                 <div class="banner__wrapper">
                     <div class="row">
                         <div class="col-md-5">
-                            <h1>HOLO <span>inspired by</span> the excitement of travel</h1>
-                            <p class="subheading">Save money, time and stress.</p>
+                            <h1 data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">HOLO <span>inspired by</span> the excitement of travel</h1>
+                            <p class="subheading" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">Save money, time and stress.</p>
                         </div>
                         <div class="col-md-6 offset-md-1">
-                            <div class="image-wrapper banner__image banner__image--normal">
+                            <div class="image-wrapper banner__image banner__image--normal" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                                 <picture>
                                     <source media="(min-width: 992px)" srcset="./img/about-media-1.jpg">
                                     <img src="./img/about-media-1.jpg" alt="Simple">
@@ -86,7 +86,7 @@
         <!-- Text media -->
         <section class="section text-media text-media--right">
             <div class="container">
-                <div class="text-media__wrapper">
+                <div class="text-media__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="text-media__description">
@@ -110,7 +110,7 @@
         <!-- Text media reverse -->
         <section class="section text-media text-media--left">
             <div class="container">
-                <div class="text-media__wrapper">
+                <div class="text-media__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-md-5">
                             <div class="text-media__image image-wrapper">
@@ -134,7 +134,7 @@
         <!-- Text media -->
         <section class="section text-media text-media--right">
             <div class="container">
-                <div class="text-media__wrapper">
+                <div class="text-media__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="text-media__description">
@@ -157,7 +157,7 @@
         </section>
         <!-- Accordion -->
         <section class="section accordion container">
-            <div class="accordion__wrapper">
+            <div class="accordion__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="accordion__header">
                     <p class="subtitle">FAQs</p>
                     <h2>About Holo.</h2>
@@ -288,7 +288,7 @@
         <!-- Partner -->
         <section class="section partner">
             <div class="container">
-                <div class="partner__wrapper">
+                <div class="partner__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="partner__header">
                         <p class="subtitle">Our Trusted</p>
                         <h2>Partners</h2>
@@ -495,7 +495,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <section class="footer__top">
+            <section class="footer__top" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__top-item col-md-4">
                         <h2>Let's talk</h2>
@@ -570,7 +570,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__middle">
+            <section class="footer__middle" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__middle-item col-md-3">
                         <h3>Shop Products</h3>
@@ -621,7 +621,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__bottom">
+            <section class="footer__bottom" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__bottom-item col-md-3">
                         <p>&copy; 2023 Holo Store.</p>
