--- a/src/contact.html
+++ b/src/contact.html
@@ -62,9 +62,10 @@
         </div>
     </header>
     <main class="page-wrap">
+        <!-- Banner -->
         <section class="section banner banner--plain">
             <div class="container">
-                <div class="banner__wrapper">
+                <div class="banner__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-md-8">
                             <h1>We're here to help</h1>
@@ -83,11 +84,12 @@
                 </div>
             </div>
         </section>
+        <!-- Card Icon -->
         <section class="section section--tight card-icon">
             <div class="container">
                 <div class="card-icon__wrapper">
                     <div class="row">
-                        <div class="col col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-sms"></i>
@@ -102,7 +104,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-send"></i>
@@ -119,7 +121,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col col-md-4 col-lg-3">
+                        <div class="col col-md-4 col-lg-3" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">
                             <div class="card-icon__item">
                                 <div class="card-icon__image">
                                     <i class="icon-location"></i>
@@ -135,9 +137,10 @@
                 </div>
             </div>
         </section>
+        <!-- Contact form -->
         <section class="section contact">
             <div class="container">
-                <div class="contact__wrapper">
+                <div class="contact__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-12 col-md-10 col-lg-8">
                             <div class="contact__header">
@@ -191,7 +194,7 @@
         </section>
         <section class="section faq-shortcut">
             <div class="container">
-                <div class="faq-shortcut__wrapper">
+                <div class="faq-shortcut__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="row">
                         <div class="col-lg-6">
                             <p class="subtitle">Frequently asked questions</p>
@@ -274,21 +277,21 @@
                 <div class="cta__wrapper">
                     <div class="row">
                         <div class="col-md-8">
-                            <p class="h1">Start saving time and cash</p>
-                            <p class="subheading">Get up-to 30% discount right away.</p>
-                            <a href="products.html" class="btn btn-primary">Buy now</a>
+                            <p class="h1" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">Start saving time and cash</p>
+                            <p class="subheading" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">Get up-to 30% discount right away.</p>
+                            <a href="products.html" class="btn btn-primary" data-sal="fade" data-sal-delay="600" data-sal-duration="500" data-sal-easing="ease-out-back">Buy now</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="map">
+        <section class="map" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.941734350116!2d115.08784306256203!3d-8.827332475674213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd24ffc20cb8191%3A0xcb98d1ba7db0495!2sUluwatu%20Temple!5e0!3m2!1sen!2sid!4v1674524036744!5m2!1sen!2sid" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <section class="footer__top">
+            <section class="footer__top" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__top-item col-md-4">
                         <h2>Let's talk</h2>
@@ -363,7 +366,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__middle">
+            <section class="footer__middle" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__middle-item col-md-3">
                         <h3>Shop Products</h3>
@@ -414,7 +417,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__bottom">
+            <section class="footer__bottom" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__bottom-item col-md-3">
                         <p>&copy; 2023 Holo Store.</p>
