--- a/src/products.html
+++ b/src/products.html
@@ -68,7 +68,7 @@
                 <div class="banner__wrapper">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="image-wrapper banner__image banner__image--normal">
+                            <div class="image-wrapper banner__image banner__image--normal" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                                 <picture>
                                     <source media="(min-width: 992px)" srcset="./img/product-banner.jpg">
                                     <img src="./img/product-banner.jpg" alt="Simple">
@@ -76,9 +76,9 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 offset-lg-1">
-                            <h1><span>Award-winning</span> local store, delivered simply</h1>
-                            <p class="subheading">Discover classic and contemporary styles finely crafted from premium Indonesian fabrics, including pure wool, linen cotton, alpaca, cashmere and silk.</p>
-                            <p class="subtitle">** Psst get 30% discount here</p>
+                            <h1 data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back"><span>Award-winning</span> local store, delivered simply</h1>
+                            <p class="subheading" data-sal="fade" data-sal-delay="400" data-sal-duration="500" data-sal-easing="ease-out-back">Discover classic and contemporary styles finely crafted from premium Indonesian fabrics, including pure wool, linen cotton, alpaca, cashmere and silk.</p>
+                            <p class="subtitle" data-sal="fade" data-sal-delay="600" data-sal-duration="500" data-sal-easing="ease-out-back">** Psst get 30% discount here</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
         <section class="section product">
             <div class="container">
                 <div class="product__wrapper">
-                    <div class="row">
+                    <div class="row" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                         <div class="col-md-4">
                             <div class="product__item card">
                                 <div class="card__wrapper">
@@ -201,7 +201,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product__button">
+                    <div class="product__button" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                         <button class="btn btn-primary" id="loadMoreProduct">load more</button>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
         <!-- Review Slider -->
         <section class="section review-slider">
             <div class="container">
-                <div class="review-slider__wrapper">
+                <div class="review-slider__wrapper" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                     <div class="review-slider__header">
                         <h2>Hear from our customers.</h2>
                     </div>
@@ -346,7 +346,7 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <section class="footer__top">
+            <section class="footer__top" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__top-item col-lg-4 col-md-4">
                         <h2>Let's talk</h2>
@@ -421,7 +421,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__middle">
+            <section class="footer__middle" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__middle-item col-md-3">
                         <h3>Shop Products</h3>
@@ -472,7 +472,7 @@
                     </div>
                 </div>
             </section>
-            <section class="footer__bottom">
+            <section class="footer__bottom" data-sal="fade" data-sal-delay="300" data-sal-duration="500" data-sal-easing="ease-out-back">
                 <div class="footer__wrapper-box row">
                     <div class="footer__bottom-item col-md-3">
                         <p>&copy; 2023 Holo Store.</p>
